fix other 15 typos

--- a/RASD/latex/main.tex
+++ b/RASD/latex/main.tex
@@ -17,7 +17,7 @@
 \textbf{Version:} & 1.0 \\ 
 \textbf{Date:} & 27-October-2017 \\
 \textbf{Download page:} & https://github.com/mirkosalaris/CassarinoSalarisVentrella/\\
-\textbf{Copyright:} & Copyright © 2017, M. Salaris, P. Ventrella, P. Cassarino\\
+\textbf{Copyright:} & Copyright \textcopyright 2017, M. Salaris, P. Ventrella, P. Cassarino\\
 \hfill & All rights reserved \\
 \smallskip & \smallskip\\
 \hline
