--- a/RASD/latex/sections/introduction.tex
+++ b/RASD/latex/sections/introduction.tex
@@ -30,7 +30,7 @@ The system interfaces with other firms (e.g. transportation companies, territory
 		\end{enumerate}
 		\item \mylabel{G-invite}{a User should be able to invite other persons to his/her appointment}
 		\item \mylabel{G-owns-ticket}{a User is assisted in the purchase of a ticket when it is required}
-		\item \mylabel{G-locate}{a User should be able to locate nearest vehicle of a vehicle sharing system, if that is the transportation mean of choice of an incoming appointment}
+		\item \mylabel{G-locate}{a User should be able to locate the nearest vehicle of a vehicle sharing system, if that is the transportation mean of choice of an incoming appointment}
 		\item \mylabel{G-redirection}{a User should be able to rent a shared vehicle, if that is the transportation mean of choice of an incoming appointment}
 		\item \mylabel{G-notify}{a User should always be aware of the incoming appointments and how to reach them}
 		\begin{enumerate}[label=\theenumi\#{\arabic*}]
@@ -44,9 +44,9 @@ The system interfaces with other firms (e.g. transportation companies, territory
 		Here we provide a list of definitions of words and expression used in the documents. Every time such words or expressions will be used they will be preceded by the symbol "($\uparrow$)" that will be a link to this section.
 		\begin{description}
 			\item[- \textit{affiliated company}:] a company (transport company or vehicle sharing company) that has deals with the S2B.
-			\item[- \textit{appointment details}:] time, date, type of appointment, location, number of passengers and precence of baggage.
-			\item[- \textit{break window}:] it is a time slot in which the User specify he/she want to be absolutely free. In this time slot he does not want to have any appointment nor to be travelling. This is a fixed break window. A flexible break window is a time slot in which he/she specify he want to have some free time, but not the full window free.
-			\item[- \textit{incoming appointment}:] the next scheduled appointment for which the S2B send a remind to the user. The remind is sent  a certain amount of time before the appointment starts, to allow the user to get on time in the location.
+			\item[- \textit{appointment details}:] time, date, type of appointment, location, number of passengers and presence of baggage.
+			\item[- \textit{break window}:] it is a time slot in which the User specifies he/she wants to be absolutely free. In this time slot he does not want to have any appointment nor to be travelling. This is a fixed break window. A flexible break window is a time slot in which he/she specify he want to have some free time, but not the full window free.
+			\item[- \textit{incoming appointment}:] the next scheduled appointment for which the S2B send a reminder to the user. The reminder is sent  a certain amount of time before the appointment starts, to allow the user to get on time in the location.
 			\item[- \textit{personal preferences}:] with this term we mean that here the user can:\newline
 			- specify break time windows; \newline
 			- specify the interest or not for eco-friendly solutions;\newline
@@ -54,8 +54,8 @@ The system interfaces with other firms (e.g. transportation companies, territory
 			\item[- \textit{supported languages}:] the set of languages that the S2B will be able to use to communicate with its users. English and Italian are included.
 			\item[- \textit{valid credentials}:] Name, surname, personal email address and password.
 			\begin{itemize}
-				\item[Name:] it should be non empty and it should contains only alphabetical characters
-				\item[Surname:] it should be non empty and it should contains only alphabetical characters
+				\item[Name:] it should be non empty and it should contain only alphabetical characters
+				\item[Surname:] it should be non empty and it should contain only alphabetical characters
 				\item[Email:] It should be a valid email address, with an alphanumerical string followed by a '@', followed by an alphanumerical string, a dot, and a domain name
 				\item[Password:] It should be a string with at least 8 characters
 			\end{itemize}
@@ -68,9 +68,9 @@ The system interfaces with other firms (e.g. transportation companies, territory
 	\end{description}
 	\subsubsection{Abbreviations}
 		\begin{description}
-			\item[- \textit{[Gn]}:] n-th goal. Apart when it is actually defined, it is always a reference to the definition of the goal
-			\item[- \textit{[Dn]}:] n-th domain assumption. Apart when it is actually defined, it is always a reference to the definition of the domain assumption
-			\item[- \textit{[Rn]}:] n-th requirement
+			\item[- \textit{[Gn]}:] nth goal. Apart when it is actually defined, it is always a reference to the definition of the goal
+			\item[- \textit{[Dn]}:] nth domain assumption. Apart when it is actually defined, it is always a reference to the definition of the domain assumption
+			\item[- \textit{[Rn]}:] nth requirement
 		\end{description}
 \subsection{Revision history}
 \subsection{Document Structure}
