--- a/RASD/latex/sections/overview.tex
+++ b/RASD/latex/sections/overview.tex
@@ -7,7 +7,7 @@ Here we provide several scenarios to better delineate the purposes for which the
 	Mario is the director of his company and he has seen an ad of Travlendar+, so he wants to try it to organize the weekly meetings with his employees. After the installation, he has to register to the app. The first thing he creates is his weekly program. He works from Monday to Friday, from 8 am to 16 pm.\newline
 	There is an actual meeting coming up on Friday at 8 pm, so he creates a new	meeting in the app. After setting the time and the day, he invites his employees to join the meeting. He will remain in his office, so he will not need to use	any travel means.\newline
 	Giovanni is one of Mario's employee and he is registered to Travlendar+. He receives a notification and accepts the invitation to the meeting. He chooses to reach the location by walk because he will already be nearby.\newline
-	Alex is another employee and does not have an account on Travlendar. He receives an email with an invitation link to register to the app. After the registration, the app redirects him to the meeting's invitation and he will proceed by accepting it and choosing to go by car. Then he explores the app and decides to add his weekly program. The app finds out that he will be in the cafe near the metro at 6:40 pm, so it suggests Alex take the metro instead of the car. He accepts the suggestion.
+	Alex is another employee and does not have an account on Travlendar. He receives an email with an invitation link to register to the app. After the registration, the app redirects him to the meeting's invitation and he will proceed by accepting it and choosing to go by car. Then he explores the app and decides to add his weekly program. The app finds out that he will be in the cafe near the metro at 6:40 pm, so it suggests Alex takes the metro instead of the car. He accepts the suggestion.
 	\subsubsection{Scenario 2}
 	Paolo, a resident of Bergamo, has recently registered to Travlendar+ and during	the initial setup has specified a flexible launch break from 11:00 am to 13:00 am, with at least 40 minutes of break.\newline
 	Tomorrow he is going to have an audition at 12:30 pm, in Monza. He inserts the event in the app and after having specified that the audition will end at about 13:30pm, he looks at the suggestions of the app on the travel means to take: the app suggests him some travel solutions, but he does not specify which he's going to take because he wants to think about it overnight.\newline
