--- a/RASD/latex/sections/references.tex
+++ b/RASD/latex/sections/references.tex
@@ -9,7 +9,7 @@
 	\item
 		Alloy latex highlighting package: \href{https://github.com/Angtrim/alloy-latex-highlighting}{https://github.com/Angtrim/alloy-latex-highlighting}
 	\item
-		StarUML for uml models
+		StarUML for UML models
 	\end{itemize}
 \subsection{Reference Documents}
 	\begin{itemize}
