--- a/RASD/latex/sections/requirements.tex
+++ b/RASD/latex/sections/requirements.tex
@@ -38,12 +38,12 @@
 			\caption{Person Use Case Diagram}
 		\end{figure}
 		\begin{figure}[H]	
-			\centerline{\includegraphics[width=\paperwidth-1]{Images/UseCaseDiagram1}}
+			\centerline{\includegraphics[width=\paperwidth~]{Images/UseCaseDiagram1}}
 			\caption{User Use Case Diagram}
 		\end{figure}
 
 	\begin{figure}[H]	
-	\centerline{\includegraphics[width=\paperwidth-1]{Images/UseCaseDiagram2}}
+	\centerline{\includegraphics[width=\paperwidth~]{Images/UseCaseDiagram2}}
 	\caption{ "Specify Details" Use Case }
 \end{figure}
 		\renewcommand{\arraystretch}{1.6} % increase line height
@@ -195,7 +195,7 @@
 				\\
 				\hline\textbf{Flow of events:} & User selects an appointment;\newline
 				User,  through the app, searches for tickets for the specified transportation mean; \newline
-				User selects the ticket’s option and picks one;\newline
+				User selects the ticket's option and picks one;\newline
 				User proceeds with the payment;\newline
 				The payment operation ends successfully;\newline
 				The app sends a confirmation and redirects the User to the main page;
@@ -217,16 +217,16 @@
 		% don't really know what happens here, but it is fine graphically
 		% ((I'm referring to '\paperwidth-1')
 		\begin{figure}[H]
-			\centerline{\includegraphics[width=\paperwidth-1]{Images/ClassDiagram}}
+			\centerline{\includegraphics[width=\paperwidth~]{Images/ClassDiagram}}
 			\caption{General Class Diagram}
 		\end{figure}
 	\subsubsection{Activity diagrams}
 		\begin{figure}[H]
-			\centerline{\includegraphics[width=\paperwidth-1]{Images/RegistrationDiagramAD}}
+			\centerline{\includegraphics[width=\paperwidth~]{Images/RegistrationDiagramAD}}
 			\caption{Registration Activity Diagram}
 		\end{figure}
 		\begin{figure}[H]
-			\centerline{\includegraphics[width=\paperwidth-1]{Images/CreationAppointmentAD}}
+			\centerline{\includegraphics[width=\paperwidth~]{Images/CreationAppointmentAD}}
 			\caption{Creation appointment Activity Diagram}
 		\end{figure}
 		\begin{figure}[H]
@@ -329,7 +329,7 @@
 	\begin{enumerate}[resume, label={[R\arabic*]}]
 		\item \mylabel{R-incoming-notified}{when an appointment becomes incoming, the S2B sends a notification to the User}
 		\item \mylabel{R-notChoosen-suggests}{if a travel plan has not already been set by the User, the notification suggests one}
-		\item \mylabel{R-choosen-update}{if a travel plan has already been choosen but some complications (bad weather, traffic, strikes) have arosen the User is informed and a new feasible solution is suggested}
+		\item \mylabel{R-choosen-update}{if a travel plan has already been chosen but some complications (bad weather, traffic, strikes) have arisen the User is informed and a new feasible solution is suggested}
 	\end{enumerate}
 	
 \subsection{Performance Requirements}
@@ -351,7 +351,7 @@ The S2B, at least for the start, will only be available for the Lombardy region.
 	
 	\subsubsection{Any other constraint}
 \textbf{Regulatory policies}\newline
-	The system will ask for users' payment informations and obviously, in addition to store them
+	The system will ask for users' payment information and obviously, in addition to store them
 	safely, will use them only for fees and rides payments.
 	Moreover, the system will have to ask for users' permission in order to retrieve and use their
 	positions.
@@ -368,7 +368,7 @@ In addition, when the user wants to buy tickets or rent a shared vehicle, the st
 	
 	\subsubsection{Maintainability}
 	The S2B must be designed in a way to easily correct defects or their cause,
-	repair or replace faulty or worn-out components without having to replace still working parts,
+	repair or replace faulty or worn out components without having to replace still working parts,
 	prevent unexpected working condition,
 	maximize its useful life,
 	maximize efficiency, reliability, and safety,
