update alloy, generate Final Model

--- a/RASD/latex/sections/alloy.tex
+++ b/RASD/latex/sections/alloy.tex
@@ -2,5 +2,8 @@
 \alloyfile{../alloy.als}
 \subsection{Results of Alloy Analysis}
 \includegraphics[scale=0.5]{Images/alloyRun}
-\subsection{Alloy Model}
-% TODO
+\begin{landscape}
+	\thispagestyle{empty}
+	\subsection{Alloy Model}
+	\centerline{\includegraphics[scale=0.45]{Images/ModelExample}}
+\end{landscape}
