--- a/RASD/latex/commandsFile.tex
+++ b/RASD/latex/commandsFile.tex
@@ -11,6 +11,7 @@
 \usepackage{float}
 \usepackage{alloy-style}
 \usepackage{enumitem}
+\usepackage{pdflscape}
 
 \colorlet{mylinkcolor}{Orange}
 \colorlet{mycitecolor}{Orange}
