update Effort, fix some typos

--- a/RASD/latex/sections/introduction.tex
+++ b/RASD/latex/sections/introduction.tex
@@ -43,9 +43,9 @@ The system interfaces with other firms (e.g. transportation companies, territory
 		\label{definitions}
 		Here we provide a list of definitions of words and expression used in the documents. Every time such words or expressions will be used they will be preceded by the symbol "($\uparrow$)" that will be a link to this section.
 		\begin{description}
-			\item[- \textit{affiliated company}:] a company (transport company or vehicle sharing company) that has deals with the S2B.
+			\item[- \textit{affiliated company}:] a company (transportation company or vehicle sharing company) that has deals with the S2B.
 			\item[- \textit{appointment details}:] time, date, type of appointment, location, number of passengers and presence of baggage.
-			\item[- \textit{break window}:] it is a time slot in which the User specifies he/she wants to be absolutely free. In this time slot he does not want to have any appointment nor to be travelling. This is a fixed break window. A flexible break window is a time slot in which he/she specify he want to have some free time, but not the full window free.
+			\item[- \textit{break window}:] it is a time slot in which the User specifies he/she wants to be absolutely free. In this time slot he does not want to have any appointment nor to be travelling. This is a fixed break window. A flexible break window is a time slot in which the User specifies he/she wants to have some free time, but not the full window free.
 			\item[- \textit{incoming appointment}:] the next scheduled appointment for which the S2B send a reminder to the user. The reminder is sent  a certain amount of time before the appointment starts, to allow the user to get on time in the location.
 			\item[- \textit{personal preferences}:] with this term we mean that here the user can:\newline
 			- specify break time windows; \newline
