--- a/RASD/latex/sections/effort&team.tex
+++ b/RASD/latex/sections/effort&team.tex
@@ -2,7 +2,8 @@ We worked together most of the time, more than 30 hours. This is because in the 
 Below, for each component of the team, we provide his list of main responsibilities, but it is important to say that we have absolutely collaborated on everything as said before.
 
 \begin{description}
-	\item[Cassarino Pietro] % TODO
+	\item[Cassarino Pietro] produced Purpose and Scope of the Introduction section and 2 of the six scenarios. He created Activity Diagrams and collaborated in Goals and Requirements development. He produced part of the alloy modeling, in particular signatures and facts. \newline
+	\textbf{Total hours:} 60 hours, \textbf{Hours working alone:} 27 hours
 	\item[Salaris Mirko] organized the work on \LaTeX\ delineating the document structure and improving it later on. He produced 2 of the six scenarios and created the Class Diagram. Moreover, he delineated the first stub of Goals and Requirements. A part of the alloy modeling was his responsibility.\newline
 	\textbf{Total hours:} 63 hours, \textbf{Hours working alone:} 30 hours
 	\item[Ventrella Piervincenzo] produced 2 of the six scenarios and compiled several sections of the RASD such as Definitions' section , User characteristictics'section, Specific Requirements, Performance and Design Constraints. He also cared of the UML modeling (diagrams and analysis of them). Lastly he provided some mockups. \newline
