--- a/DD/latex/sections/introduction.tex
+++ b/DD/latex/sections/introduction.tex
@@ -7,6 +7,12 @@
 \subsection{Definitions, Acronyms, Abbreviations}
 	% TODO
 	\subsubsection{Definitions}
+	\label{definitions}
+	Here we provide a list of definitions of words and expression used in the documents. Every time such words or expressions will be used they will be preceded by the symbol "($\uparrow$)" that will be a link to this section.
+	\begin{description}[before={\renewcommand{\makelabel}[1]{-- \textbf{\textit{##1}}:}}]
+		\item[Incoming Appointment] the next scheduled appointment for which the S2B send a reminder to the user. The reminder is sent  a certain amount of time before the appointment starts, to allow the user to get on time in the location.
+		\item[Future Notification] a notification that is generated but it will be eventually sent only in a future time. The time has to be specified during the creation.
+	\end{description}
 	\subsubsection{Acronyms}
 	\subsubsection{Abbreviations}
 	
