Add UX Diagrams

--- a/DD/latex/sections/userInterfaceDesign.tex
+++ b/DD/latex/sections/userInterfaceDesign.tex
@@ -1,1 +1,11 @@
-% TODO
+\subsection{UX Diagrams}
+We chose not to expand the methods preceded by **, considering them unattractive and not to weigh the diagram unnecessarily.
+
+	\begin{figure}[H]	
+		\centerline{\includegraphics[width=0.9\paperwidth]{Images/UxPerson}}
+		\caption{UX Diagram - Person UX}
+	\end{figure}	
+	\begin{figure}[H]	
+		\centerline{\includegraphics[width=0.9\paperwidth]{Images/UxUser}}
+		\caption{UX Diagram - User UX}
+	\end{figure}
