--- a/DD/latex/sections/architecturalDesign.tex
+++ b/DD/latex/sections/architecturalDesign.tex
@@ -1,11 +1,13 @@
-\subsection{Overview} 
-Here we provide a high level representation of client-server interaction.
-The client sends a request to the orchestrator who dispatches the request to the appropriate component. Both, components and orchestrator, are stateless. We thought to use the elastic component architectural pattern for the components. Moreover the orchestrator can eventually be duplicated using a fixed dimension  pool whoseconfigurable by the system administrator.
+\subsection{Overview}
+	Here we provide a high level representation of client-server interaction and of the submodule of the server.
+	The orchestrator is needed only during the creation of the communication: his role is to dispatch the request of the client to the appropriate component. After that, the component can communicate directly with the client and vice versa.\newline
+	In the server, the orchestrator and all the submodules are stateless. We thought to use the elastic component architectural pattern for the components. Moreover, the orchestrator can eventually be duplicated using a fixed dimension pool whose size is configurable by the system administrator.\newline
+	Further details on the submodule and the overall interaction will be provided in the next sections.
 
-	\begin{figure}[H]	
-	\centerline{\includegraphics[width=0.9\paperwidth]{Images/HighLevelArchitecture}}
-	\caption{High level Architecture Diagram - Client-Server interaction}
-	\end{figure}	
+	\begin{figure}[H]
+		\centerline{\includegraphics[width=0.9\paperwidth]{Images/HighLevelArchitecture}}
+		\caption{High level Architecture Diagram - Client-Server interaction}
+	\end{figure}
 \subsection{Component view}
 	In the following diagrams we include a fictitious component, App, that will be highlighted in green and serves the purpose of representing both the mobile app and the web app (through the web server), without adding complexity to the diagrams.
 	\subsubsection{Appointment Manager and Notification Manager}
@@ -15,7 +17,7 @@ The client sends a request to the orchestrator who dispatches the request to the
 		\medskip\newline
 		Appointment Manager has three subcomponents:		
 		\begin{description}[before={\renewcommand{\makelabel}[1]{-- \textit{##1}:}}]
-			\item[Appointment Handler] it is the only subcomponents communicating with the database: it manages all the read and write operations related to appointments. It is responsible for the final consistency check of the appointment before writing it to database. It exports an interface to external components to read appointments details and an internal interface to let subcomponents of Appointment Manager read and write appointments' details.
+			\item[Appointment Handler] it is the only subcomponents communicating with the database: it manages all the read and write operations related to appointments. It is responsible for the final consistency check of the appointment before writing it to database. It exports an interface to let external components read appointments details and an internal interface to let subcomponents of Appointment Manager read and write appointments' details.
 			\item[Appointment Editor] this provides an interface to easily change appointments' details and store it to database through the interface of Appointment Handler. Every time an appointment is created or details of an appointment changes, this send to Incoming Appointment Scheduler the appointment. This module interacts with an external module "Solution Calculator" to compute travel solutions. In this diagram it is displayed in dashed line because it will be described in another diagram.
 			\item[Incoming Appointment Scheduler] for each appointment (provided by Appointment Editor) this module executes an algorithm to decide when that specific appointment will become an \defined{incoming appointment}. An appointment becomes incoming according to a combination of the time of the appointment and the travel plan chosen, to let the User receive a notification at an appropriate time. This is done generating a \defined{future notification} through the interface provided by Notification Manager.
 		\end{description}
@@ -31,6 +33,7 @@ The client sends a request to the orchestrator who dispatches the request to the
 			\caption{Component Diagram - Appointment Manager \& Notification Manager}
 		\end{figure}
 		
+	\filbreak
 	\subsubsection{Invitation Manager}
 		\label{sect:InvitationManager}
 		The Invitation Manager component is the module that manages all the aspects related to invitations, from their creation to the acceptance/refusal of the invited Users/Persons. It is divided into two subcomponents. A sequence diagram is provided in section \ref{sect:RuntimeView}.
@@ -49,7 +52,11 @@ The client sends a request to the orchestrator who dispatches the request to the
 	
 \subsection{Runtime view}
 	\label{sect:RuntimeView}
-		\begin{figure}[H]	
+	\begin{figure}[H]
+		\centerline{\includegraphics[width=0.9\paperwidth]{Images/SD_InvitationCreation}}
+		\caption{Sequence Diagram - Invitation Creation}
+	\end{figure}
+	\begin{figure}[H]
 		\centerline{\includegraphics[width=0.9\paperwidth]{Images/LocateNearest}}
 		\caption{Sequence Diagram - Locate Nearest Vehicle}
 	\end{figure}
