--- a/DD/latex/sections/introduction.tex
+++ b/DD/latex/sections/introduction.tex
@@ -12,6 +12,7 @@
 	\begin{description}[before={\renewcommand{\makelabel}[1]{-- \textbf{\textit{##1}}:}}]
 		\item[Incoming Appointment] the next scheduled appointment for which the S2B send a reminder to the user. The reminder is sent  a certain amount of time before the appointment starts, to allow the user to get on time in the location.
 		\item[Future Notification] a notification that is generated but it will be eventually sent only in a future time. The time has to be specified during the creation.
+		\item[Dynamic Configuration] with this term we mean a reconfiguration that can be done without powering off the server or any physical component.
 	\end{description}
 	\subsubsection{Acronyms}
 	\subsubsection{Abbreviations}
