Add SignUp SequenceDiagram and ModifySettings SequenceDiagram

--- a/DD/latex/sections/architecturalDesign.tex
+++ b/DD/latex/sections/architecturalDesign.tex
@@ -88,6 +88,14 @@
 	
 \subsection{Runtime view}
 	\label{sect:RuntimeView}
+		\begin{figure}[H]
+		\centerline{\includegraphics[width=0.9\paperwidth]{Images/signUp}}
+		\caption{Sequence Diagram - SignUp}
+	\end{figure}
+	\begin{figure}[H]
+	\centerline{\includegraphics[width=0.9\paperwidth]{Images/ModifySettings}}
+	\caption{Sequence Diagram - Modify Settings}
+\end{figure}
 	\begin{figure}[H]
 		\centerline{\includegraphics[width=0.9\paperwidth]{Images/SD_InvitationCreation}}
 		\caption{Sequence Diagram - Invitation Creation}
